[package]
name = "rlfsc"
version = "0.1.6"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"
description = "A checker for the LFSC proof language"
homepage = "https://github.com/alex-ozdemir/rlfsc"
repository = "https://github.com/alex-ozdemir/rlfsc"
documentation = "https://github.com/alex-ozdemir/rlfsc"
license = "MIT OR Apache-2.0"
keywords = ["type-checker", "proof-checker", "dependent-types", "LFSC", "SMT"]
categories = ["command-line-utilities", "mathematics"]
readme = "README.md"
exclude = [
    "benches",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "^0.11.4"
thiserror = "1.0.18"
rug = "1.8.0"
structopt = "0.3"
yansi = "0.5.0"
rlimit = "0.4.0"
